--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="banner">
                 <div class="bgimg"></div>
                 <div class="textdata">
-                    <h2>Hey</h2>
-                    <h1>Iosif's Web</h1>
+                    <h2>Hello 3D-Animation World!</h2>
+                    <h1>Responsive Web</h1>
                     <p class="label">Press the menu-button in the upper right corner<br>and watch the magic happen 🤙🏽</p>
                     <p class="details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa impedit quidem tempora quas iste quis enim tempore alias consectetur aliquid est mollitia commodi, aspernatur, eum vel esse nihil excepturi officiis repellendus sunt consequatur debitis. Dolor suscipit et nostrum deserunt doloribus.</p>
                     <div class="btns">
